#10 More efficiently hash nodes whose reachable nodes form trees